[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "dispo_checker"
description = ""
readme = "README.md"
version = "0.0.1"
dependencies = []
authors = [{ name = "Ryan Long", email = "ryanlong1004@gmail.com" }]
keywords = []
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "twine", "build"]


[project.scripts]
dispo_checker = "src.__main__:main"


[project.urls]
"Homepage" = "https://github.com/pypa/dispo_checker"
"Bug Tracker" = "https://github.com/pypa/dispo_checker/issues"

[tool.setuptools.packages]
find = {} # Scan the project directory with the default parameters
